recebendo parametros na rota

--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Usuários</title>
 </head>
 <body>
-    <h1>home - node + express</h1>
+    <h1>Usuários</h1>
 
-    <a href="/usuarios/30">Ver Usuário 30</a>
-    
-    <a href="/usuarios/489">Ver Usuário 489</a>
+    <a href="/">VOLTAR</a>
 </body>
 </html>
