recebendo informações do formulário no corpo da requisição

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,7 @@
     <a href="/usuarios/30">Ver Usuário 30</a>
     
     <a href="/usuarios/489">Ver Usuário 489</a>
+
+    <a href="/cadastrar">Cadastrar</a>
 </body>
 </html>
